--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="reset.css" />
     <title>Vite + React + TS</title>
   </head>
   <body>
