--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="reset.css" />
-    <title>Vite + React + TS</title>
+    <title>Ponto Illumeo</title>
   </head>
   <body>
     <div id="root"></div>
