--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="globals.css" />
+
     <title>Ponto Illumeo</title>
   </head>
   <body>
