feat: update http problem

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="globals.css" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>Ponto Illumeo</title>
   </head>
   <body>
